Increase footer padding to prevent text cutoff

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@ body {
 	flex-direction: row !important;
 	justify-content: space-between !important;
 	align-items: center !important;
-	padding: 2rem 4rem !important;
+	padding: 2rem 5rem !important;
 }
 .footer-single-line > section {
 	margin: 0 !important;
